deployments/pigallery2/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pigallery2
  namespace: pigallery2
spec:
  selector:
    app: pigallery2
  ports:
    - name: pigallery2-web
      protocol: TCP
      port: 80
      targetPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: webscreensaver
  namespace: pigallery2
spec:
  selector:
    app: webscreensaver
  ports:
    - name: webscreensaver
      protocol: TCP
      port: 80
      targetPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: imagery
  namespace: pigallery2
spec:
  selector:
    app: imagery
  ports:
    - name: imagery-web
      protocol: TCP
      port: 9000
      targetPort: 9000
