deployments/pigallery2/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pigallery2
  namespace: pigallery2
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    cert-manager.io/cluster-issuer: lets-encrypt
spec:
  tls:
    - hosts:
      - pigallery2.imagilan.imaginator.com
      secretName: pigallery2.imagilan.imaginator.com-tls
  rules:
    - host: pigallery2.imagilan.imaginator.com
      http:
        paths:
          - path: "/web-screensaver" # serves the index.html file
            pathType: Prefix
            backend:
              service:
                name: webscreensaver
                port:
                  name: webscreensaver
          - path: "/random_resized_image" # gets a file from pigallery and resizes
            pathType: Prefix
            backend:
              service:
                name: webscreensaver
                port:
                  name: webscreensaver
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: pigallery2
                port:
                  name: pigallery2-web
          - path: /imaginary
            pathType: Prefix
            backend:
              service:
                name: imagery
                port:
                  name: imagery-web
